3.5.0/_sources/gallery/subplots_axes_and_figures/share_axis_lims_views.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/share_axis_lims_views.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_share_axis_lims_views.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_share_axis_lims_views.py:


Sharing axis limits and views
=============================

It's common to make two or more plots which share an axis, e.g., two subplots
with time as a common axis.  When you pan and zoom around on one, you want the
other to move around with you.  To facilitate this, matplotlib Axes support a
``sharex`` and ``sharey`` attribute.  When you create a `~.pyplot.subplot` or
`~.pyplot.axes`, you can pass in a keyword indicating what axes you want to
share with.

.. GENERATED FROM PYTHON SOURCE LINES 12-25



.. image-sg:: /gallery/subplots_axes_and_figures/images/sphx_glr_share_axis_lims_views_001.png
   :alt: share axis lims views
   :srcset: /gallery/subplots_axes_and_figures/images/sphx_glr_share_axis_lims_views_001.png, /gallery/subplots_axes_and_figures/images/sphx_glr_share_axis_lims_views_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt

    t = np.arange(0, 10, 0.01)

    ax1 = plt.subplot(211)
    ax1.plot(t, np.sin(2*np.pi*t))

    ax2 = plt.subplot(212, sharex=ax1)
    ax2.plot(t, np.sin(4*np.pi*t))

    plt.show()


.. _sphx_glr_download_gallery_subplots_axes_and_figures_share_axis_lims_views.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: share_axis_lims_views.py <share_axis_lims_views.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: share_axis_lims_views.ipynb <share_axis_lims_views.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
